@@ -10,7 +10,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -18,7 +18,7 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -26,7 +26,7 @@ public class DepartmentsTest {
     @Test
     public void whenSortAsc() {
         List<String> input = Arrays.asList("k1", "k1/sk2", "k1/sk1/ssk2");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk2", "k1/sk2");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk2", "k1/sk2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -35,7 +35,7 @@ public class DepartmentsTest {
     @Test
     public void whenSortAsc2() {
         List<String> input = Arrays.asList("k1/sk1/ssk2");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk2");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -44,7 +44,7 @@ public class DepartmentsTest {
     @Test
     public void whenSortDesc() {
         List<String> input = Arrays.asList("k1", "k2/sk1");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k1");
+        List<String> expect = List.of("k2", "k2/sk1", "k1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertThat(result, is(expect));
@@ -55,7 +55,7 @@ public class DepartmentsTest {
         List<String> input = Arrays.asList(
                 "k2/sk1", "k1/sk1/ssk1", "k2/sk1/ssk2", "k1/sk1/ssk2", "k1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k2", "k2/sk1", "k2/sk1/ssk2", "k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2"
         );
         List<String> result = Departments.fillGaps(input);
